--- a/artikel.html
+++ b/artikel.html
@@ -120,7 +120,9 @@
 	        <div id = 'rec3'><script>draw_article_button('rec3','rostiga-roadtrips',isMobile)</script></div>
 	  </div>
         </div>
-        
+
+	<script src = "script_closed.js"></script>
+	    
         <script>
         function content_of_tag(str,tag,start){
     		let start_index = str.indexOf("<" + tag + ">",start);
