--- a/livsstil.html
+++ b/livsstil.html
@@ -128,7 +128,8 @@
 	</style>
 	
 	<script src = "scripts_ab.js"></script>
-    	
+    	<script src = "script_closed.js"></script>
+	
 	<div class = tidning>
 		<div id ='blogg_inlägg' class = blog_area>
 			<div id = 'main6'><script>draw_article_button('main6','göteborgs-cyklister',isMobile)</script></div>
