--- a/mode.html
+++ b/mode.html
@@ -128,7 +128,8 @@
 	</style>
 	
 	<script src = "scripts_ab.js"></script>
-    	
+	<script src = "script_closed.js"></script>
+	
 	<div class = tidning>
 		<div id ='blogg_inlägg' class = blog_area>
 			<div id = 'main3'><script>draw_article_button('main3','ute-inne-aug-24',isMobile)</script></div>	
