--- a/mode.html
+++ b/mode.html
@@ -128,7 +128,7 @@
 	</style>
 	
 	<script src = "scripts_ab.js"></script>
-	<!--<script src = "script_closed.js"></script>-->
+	<script src = "script_closed.js"></script>
 	
 	<div class = tidning>
 		<div id ='blogg_inlägg' class = blog_area>
