--- a/drakens-värld.html
+++ b/drakens-värld.html
@@ -23,7 +23,7 @@
       			.then(function(resp){
       				document.getElementById('web-header').innerHTML = resp;
   			});
-  		
+  		<script src = "script_closed.js"></script>
   	</script></div>
         <div class = game>
           <iframe id="game-iframe" class = game src="https://bolibompa-cdn.dojnaz.net/svt/spel/drakens-varld">
