Update and rename hemliga-klubben to hemliga-klubben.html

--- a/hemliga-klubben.html
+++ b/hemliga-klubben.html
@@ -23,12 +23,13 @@
 		}
 
 		body{
-			background-color: #DCEAE9FF;
+			background-image: url("bilder/hemligklubben_bakgrund_tile.png");
+			background-repeat: repeat;
 			
 			margin: 0px;
 			padding: 0px;
-			 max-width: 100%;
-		   	 overflow-x: hidden;
+			max-width: 100%;
+		   	overflow-x: hidden;
 		}
 
 		h1{
