--- a/hemliga-klubben.html
+++ b/hemliga-klubben.html
@@ -4,8 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="gaffel har stängt">
-	<title>STÄNGT</title>
+	<title>Hemliga klubben</title>
 	<link rel="icon" type="image/x-icon" href="/favicon.ico">
 	
 	<style>
