--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 	<div class = tidning>
 		
 		<div id = 'top' style = "width: 100%; margin-bottom: 20px;">
-			<div id = 'blickfång'><script>draw_article_button('blickfång','ute-inne-aug-24',isMobile)</script></div>	
+			<div id = 'blickfång'><script>draw_article_button('blickfång','ölreportaget',isMobile)</script></div>	
 			<div style = "background: black; width: 100%;">
 
 			</div>
@@ -203,6 +203,7 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main18'><script>draw_article_button('main18','att-gå-vilse',isMobile)</script></div>
 			<div id = 'main17'><script>draw_article_button('main17','broder-daniel',isMobile)</script></div>
 			<div id = 'main16'><script>draw_article_button('main16','göteborgs-cyklister',isMobile)</script></div>
 			<div id = 'main15'><script>draw_article_button('main15','ute-inne-aug-24',isMobile)</script></div>
