--- a/livsstil.html
+++ b/livsstil.html
@@ -132,6 +132,7 @@
 	
 	<div class = tidning>
 		<div id ='blogg_inlägg' class = blog_area>
+			<div id = 'main7'><script>draw_article_button('main7','att-gå-vilse',isMobile)</script></div>
 			<div id = 'main6'><script>draw_article_button('main6','göteborgs-cyklister',isMobile)</script></div>
 			<div id = 'main5'><script>draw_article_button('main5','stockholms-cyklister',isMobile)</script></div>
 			<div id = 'main4'><script>draw_article_button('main4','mest-it-factor-i-kungafamiljen',isMobile)</script></div>
