--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			line-height: 40px;
 			color: black;
 			font-weight: 400;
-			margin: 15px;
+			margin: 25px;
 		        margin-left: 0px;
 		}
 		p{
@@ -211,21 +211,21 @@
 			<div id = 'main15'><script>draw_article_button('main15','ute-inne-aug-24',isMobile)</script></div>
 
 			<h2 style = "width: 100%;">ÄLDRE</h2>
-			<div id = 'main14'><script>draw_article_button('main14','stockholms-cyklister',isMobile,false)</script></div>
-			<div id = 'main13'><script>draw_article_button('main13','jackan-den-moderna-människans-bil',isMobile,false)</script></div>
-			<div id = 'main12'><script>draw_article_button('main12','en-del-av-dig',isMobile,false)</script></div>
-			<div id = 'main11'><script>draw_article_button('main11','mest-it-factor-i-kungafamiljen',isMobile,false)</script></div>
-			<div id = 'main10'><script>draw_article_button('main10','fimpa-rökförbudet',isMobile,false)</script></div>
-			<div id = 'main9'><script>draw_article_button('main9','mannen-utan-egna-saker',isMobile,false)</script></div>
-			<div id = 'main8'><script>draw_article_button('main8','10-bakfyllefilmer',isMobile,false)</script></div>
-			<div id = 'main7'><script>draw_article_button('main7','bowie-var-först',isMobile,false)</script></div>
-			<div id = 'main6'><script>draw_article_button('main6','stiljournalen',isMobile,false)</script></div>
-			<div id = 'main5'><script>draw_article_button('main5','ölreportaget',isMobile,false)</script></div>
-			<div id = 'main4'><script>draw_article_button('main4','ledare-1-maj-2024',isMobile,false)</script></div>
-			<div id = 'main3'><script>draw_article_button('main3','4-råd-till-göteborgs-killar',isMobile,false)</script></div>			
-			<div id = 'main2'><script>draw_article_button('main2','rostiga-roadtrips',isMobile,false)</script></div>
-			<div id = 'main1'><script>draw_article_button('main1','snöns-brödraskap',isMobile,false)</script></div>
-			<div id = 'main0'><script>draw_article_button('main0','hawaiiskjortan',isMobile,false)</script></div>
+			<div id = 'main14'><script>draw_article_button('main14','stockholms-cyklister',isMobile)</script></div>
+			<div id = 'main13'><script>draw_article_button('main13','jackan-den-moderna-människans-bil',isMobile)</script></div>
+			<div id = 'main12'><script>draw_article_button('main12','en-del-av-dig',isMobile)</script></div>
+			<div id = 'main11'><script>draw_article_button('main11','mest-it-factor-i-kungafamiljen',isMobile)</script></div>
+			<div id = 'main10'><script>draw_article_button('main10','fimpa-rökförbudet',isMobile)</script></div>
+			<div id = 'main9'><script>draw_article_button('main9','mannen-utan-egna-saker',isMobile)</script></div>
+			<div id = 'main8'><script>draw_article_button('main8','10-bakfyllefilmer',isMobile)</script></div>
+			<div id = 'main7'><script>draw_article_button('main7','bowie-var-först',isMobile)</script></div>
+			<div id = 'main6'><script>draw_article_button('main6','stiljournalen',isMobile)</script></div>
+			<div id = 'main5'><script>draw_article_button('main5','ölreportaget',isMobile)</script></div>
+			<div id = 'main4'><script>draw_article_button('main4','ledare-1-maj-2024',isMobile)</script></div>
+			<div id = 'main3'><script>draw_article_button('main3','4-råd-till-göteborgs-killar',isMobile)</script></div>			
+			<div id = 'main2'><script>draw_article_button('main2','rostiga-roadtrips',isMobile)</script></div>
+			<div id = 'main1'><script>draw_article_button('main1','snöns-brödraskap',isMobile)</script></div>
+			<div id = 'main0'><script>draw_article_button('main0','hawaiiskjortan',isMobile)</script></div>
 		 </div>
 
 		<style>
