--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 			line-height: 40px;
 			color: black;
 			font-weight: 400;
-			margin: 25px;
+			margin-top: 35px;
+			margin-bottom: 20px;
 		        margin-left: 0px;
 		}
 		p{
