--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			font-family: helvetica_bold;
 			font-size: 50px;
 			line-height: 40px;
-			color: black;
+			color: #FFFEF7FF;
 			font-weight: 400;
 			margin-top: 35px;
 			margin-bottom: 20px;
