--- a/artikel.html
+++ b/artikel.html
@@ -115,7 +115,7 @@
 
 	  <script src = "scripts_ab.js"></script>
 	  <div style = "background: #001015FF; padding-top: 30px;">
-	  	<div id = 'rec1'><script>draw_article_button('rec1','jackan-den-moderna-människans-bil',isMobile)</script></div>
+	  	<div id = 'rec1'><script>draw_article_button('rec1','att-gå-vilse',isMobile)</script></div>
 		<div id = 'rec2'><script>draw_article_button('rec2','ute-inne-aug-24',isMobile)</script></div>
 	        <div id = 'rec3'><script>draw_article_button('rec3','stockholms-cyklister',isMobile)</script></div>
 	  </div>
