--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 			<img src = "bilder/logga_morf_vit.png" class = gaffel_logga_bild></img>
 			<p id = 'slogan'">sveriges farligaste popkulturmagasin</p>
 			<script>
-				var slogan_array = ['sveriges farligaste popkulturmagasin','sveriges farligaste popkulturmagasin','din kajplats i etern','pedagogisk underhållning i en trivsam miljö','din enda nyhetskälla','see it, say it, sorted'];
+				var slogan_array = ['sveriges farligaste popkulturmagasin','sveriges farligaste popkulturmagasin','din kajplats i etern','pedagogisk underhållning i en trivsam miljö','','see it, say it, sorted'];
 				var ny_slogan = slogan_array[Math.floor(Math.random()*slogan_array.length)];
 				console.log(ny_slogan);
 				document.getElementById('slogan').innerHTML = ny_slogan;
@@ -208,7 +208,7 @@
 			<div id = 'main17'><script>draw_article_button('main17','broder-daniel',isMobile)</script></div>
 			<div id = 'main16'><script>draw_article_button('main16','göteborgs-cyklister',isMobile)</script></div>
 
-			<h2 style = "width: 100%;">GAFFELS UTE-INNE-LISTA</h2>
+			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
 			<div id = 'main15'><script>draw_article_button('main15','ute-inne-aug-24',isMobile)</script></div>
 
 			<h2 style = "width: 100%;">ÄLDRE</h2>
