--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 	
 	<div class = tidning>
 		
-		<div id = 'top' style = "width: 100%; margin-bottom: 20px;">
+		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
 			<div id = 'blickfång'><script>draw_article_button('blickfång','ölreportaget',isMobile)</script></div>	
 			<div style = "background: black; width: 100%;">
 
