--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 	<div class = tidning>
 		
 		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
-			<div id = 'blickfång'><script>draw_article_button('blickfång','ölreportaget',isMobile)</script></div>	
+			<div id = 'blickfång'><script>draw_article_button('blickfång','inne-ute-sep-24',isMobile)</script></div>	
 			<div style = "background: black; width: 100%;">
 
 			</div>
@@ -210,10 +210,11 @@
 			<div id = 'main16'><script>draw_article_button('main16','göteborgs-cyklister',isMobile)</script></div>
 
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
-			<div id = 'main15'><script>draw_article_button('main15','ute-inne-aug-24',isMobile)</script></div>
+			<div id = 'main151'><script>draw_article_button('main151','inne-ute-sep-24',isMobile)</script></div>
 
 			<h2 style = "width: 100%;">ÄLDRE</h2>
 			<div id = 'main14'><script>draw_article_button('main14','stockholms-cyklister',isMobile)</script></div>
+			<div id = 'main15'><script>draw_article_button('main15','inne-ute-aug-24',isMobile)</script></div>
 			<div id = 'main13'><script>draw_article_button('main13','jackan-den-moderna-människans-bil',isMobile)</script></div>
 			<div id = 'main12'><script>draw_article_button('main12','en-del-av-dig',isMobile)</script></div>
 			<div id = 'main11'><script>draw_article_button('main11','mest-it-factor-i-kungafamiljen',isMobile)</script></div>
