--- a/header.html
+++ b/header.html
@@ -7,6 +7,9 @@
 		  font-family: Helvetica-Bold;
 		  src: url(font/Helvetica-Bold.ttf) format("truetype");
 		}
+		 font-family: Bobbie-Sans;
+		  src: url(font/BNBobbieSans.otf) format("opentype");
+		}
             
         body{
             margin: 0px;
@@ -39,7 +42,7 @@
             display:inline-block;
         }
         .head_cont{
-          font-family: Helvetica-Bold;
+          font-family: Bobbie-Sans;
 	  float: left;
           color: #FFFEF7FF;
           text-align: center;
