--- a/header.html
+++ b/header.html
@@ -6,10 +6,11 @@
         @font-face {
 		  font-family: Helvetica-Bold;
 		  src: url(font/Helvetica-Bold.ttf) format("truetype");
-		
+	}
+	@font-face {
 		 font-family: Bobbie-Sans;
 		  src: url(font/BNBobbieSans.otf) format("opentype");
-		}
+	}
             
         body{
             margin: 0px;
