--- a/header.html
+++ b/header.html
@@ -43,13 +43,13 @@
             display:inline-block;
         }
         .head_cont{
-          font-family: Bobbie-Sans;
+          font-family: Helvetica-Bold;
 	  float: left;
           color: #FFFEF7FF;
           text-align: center;
           padding: 18px 1vw;
           text-decoration: none;
-          font-size: 1.5em;
+          font-size: 1.2em;
 	  height: 100%;
         }
 
