--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 			<div id = 'main151'><script>draw_article_button('main151','inne-ute-sep-24',isMobile)</script></div>
 
 			<h2 style = "width: 100%;">ÄLDRE</h2>
-			<img src = "bilder/banderoll.png"></img>
+			<img src = "bilder/banderoll.png" style = "width: 100%; height: auto;"></img>
 			<div id = 'main14'><script>draw_article_button('main14','stockholms-cyklister',isMobile)</script></div>
 			<div id = 'main15'><script>draw_article_button('main15','inne-ute-aug-24',isMobile)</script></div>
 			<div id = 'main13'><script>draw_article_button('main13','jackan-den-moderna-människans-bil',isMobile)</script></div>
