--- a/header.html
+++ b/header.html
@@ -70,13 +70,15 @@
               <img src="https://i.imgur.com/hSM3AhK.png" alt="GAFFEL" style="width:50px;height:50px;">
             </a>
             </div> 
-
+	
+	<img src = "bilder/logga_morf_vit.png" style = "height: 100%; width: auto;"></img>
+		<!--
 	    <div class = left_div>
 		<a href = "kultur" class = head_cont>KULTUR</a>
 		<a href = "mode" class = head_cont>MODE</a>
 		<a href = "livsstil" class = head_cont>LIVSSTIL</a>
             </div> 
-		
+		-->
             <div class = right_div>
             <a href = "drakens-värld" class = head_cont>DRAKENS VÄRLD</a>
             </div> 
