--- a/header.html
+++ b/header.html
@@ -74,7 +74,7 @@
 	
 		
 	    <div class = left_div>
-		<img src = "bilder/logga_morf_vit.png" style = "height: 100%; width: auto;"></img>
+		<a href="/"><img src = "bilder/logga_morf_vit.png" style = "height: 100%; width: auto;"></img></a>
 		<!--<a href = "kultur" class = head_cont>KULTUR</a>
 		<a href = "mode" class = head_cont>MODE</a>
 		<a href = "livsstil" class = head_cont>LIVSSTIL</a>-->
