--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 			<img src = "bilder/logga_morf_vit.png" class = gaffel_logga_bild></img>
 			<p id = 'slogan'">sveriges farligaste popkulturmagasin</p>
 			<script>
-				var slogan_array = ['sveriges farligaste popkulturmagasin','sveriges farligaste popkulturmagasin','din kajplats i etern','pedagogisk underhållning i en trivsam miljö','see it, say it, sorted'];
+				var slogan_array = ['sveriges farligaste popkulturmagasin','sveriges farligaste popkulturmagasin','sveriges farligaste popkulturmagasin','din kajplats i etern','pedagogisk underhållning i en trivsam miljö','see it, say it, sorted', 'royalty free beats'];
 				var ny_slogan = slogan_array[Math.floor(Math.random()*slogan_array.length)];
 				console.log(ny_slogan);
 				document.getElementById('slogan').innerHTML = ny_slogan;
@@ -205,14 +205,15 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main21'><script>draw_article_button('main21','är-ditt-hem-redo-för-ett-hemsläp',isMobile)</script></div>
 			<div id = 'main20'><script>draw_article_button('main20','turistortens-klagan',isMobile)</script></div>
 			<div id = 'main19'><script>draw_article_button('main19','det-stora-europeiska-ciggreportaget',isMobile)</script></div>
-			<div id = 'main18'><script>draw_article_button('main18','att-gå-vilse',isMobile)</script></div>
 			
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
 			<div id = 'main151'><script>draw_article_button('main151','inne-ute-sep-24',isMobile)</script></div>
 
 			<h2 style = "width: 100%;">ÄLDRE</h2>
+			<div id = 'main18'><script>draw_article_button('main18','att-gå-vilse',isMobile)</script></div>
 			<div id = 'main17'><script>draw_article_button('main17','broder-daniel',isMobile)</script></div>
 			<div id = 'main16'><script>draw_article_button('main16','göteborgs-cyklister',isMobile)</script></div>
 			<div id = 'main14'><script>draw_article_button('main14','stockholms-cyklister',isMobile)</script></div>
