--- a/artikel.html
+++ b/artikel.html
@@ -186,7 +186,7 @@
     		var a_str = resp;
     		console.log(a_str);
                        
-	var b_str = a_str.replaceAll('images/','artiklar/' + tag)
+	var b_str = a_str.replaceAll('images/','artiklar/' + tag + '/')
 		 console.log(b_str); 
             document.getElementById('innehåll').innerHTML = b_str;
              
