--- a/artikel.html
+++ b/artikel.html
@@ -205,10 +205,16 @@
 			var hi2 = b_str.indexOf(` height:`,wi2);
 			var e_hi2 = b_str.indexOf(`px`,hi2);
 
-			console.log(b_str.substr(wi,e_wi));
-			console.log(b_str.substr(hi,e_hi));
-			console.log(b_str.substr(wi2,e_wi2));
-			console.log(b_str.substr(hi2,e_hi2));
+			console.log(wi);
+			console.log(e_wi);
+
+			console.log(hi);
+			console.log(e_hi);
+			
+			//console.log(b_str.substr(wi,e_wi));
+			//console.log(b_str.substr(hi,e_hi));
+			//console.log(b_str.substr(wi2,e_wi2));
+			//console.log(b_str.substr(hi2,e_hi2));
 
 			
 		}
