--- a/artikel.html
+++ b/artikel.html
@@ -195,16 +195,16 @@
 		var wi = 0
 		for (let i = 0; i < img_num; i++) {
 		  	wi = b_str.indexOf(` width:`,wi);
-			var e_wi = b_str.indexOf(`px`,wi);
+			var e_wi = b_str.indexOf(`;`,wi);
 			
 			var hi = b_str.indexOf(` height:`,wi);
-			var e_hi = b_str.indexOf(`px`,hi);
+			var e_hi = b_str.indexOf(`;`,hi);
 			
 
-			wi2 = b_str.indexOf(`"width:`,wi);
-			var e_wi2 = b_str.indexOf(`px`,wi2);
+			wi2 = b_str.indexOf(`"width:`,wi)+1;
+			var e_wi2 = b_str.indexOf(`;`,wi2);
 			var hi2 = b_str.indexOf(` height:`,wi2);
-			var e_hi2 = b_str.indexOf(`px`,hi2);
+			var e_hi2 = b_str.indexOf(`;`,hi2);
 
 			
 			console.log(b_str.substring(wi,e_wi));
