--- a/artikel.html
+++ b/artikel.html
@@ -186,7 +186,6 @@
     		var a_str = resp;
                        
 		var b_str = a_str.replaceAll('images/','artiklar/' + tag + '/');
-		var b_str = b_str.replaceAll('#ffffff','#fffef7');
 		  
 		    let f = ".png";
 		    let img_num = b_str.split(f).length - 1;
@@ -206,11 +205,11 @@
 			var hi2 = b_str.indexOf(` height:`,wi2);
 			var e_hi2 = b_str.indexOf(`;`,hi2);
 
-			
-			console.log(b_str.substring(wi,e_wi));
-			console.log(b_str.substring(hi,e_hi));
-			console.log(b_str.substring(wi2,e_wi2));
-			console.log(b_str.substring(hi2,e_hi2));
+			b_str = b_str.replaceAll(b_str.substring(wi,e_wi),'100%');
+			b_str = b_str.replaceAll(b_str.substring(hi,e_hi),'auto');
+
+			b_str = b_str.replaceAll(b_str.substring(wi2,e_wi2),'100%');
+			b_str = b_str.replaceAll(b_str.substring(hi2,e_hi2),'auto');
 
 			
 		}
