--- a/artikel.html
+++ b/artikel.html
@@ -210,10 +210,10 @@
 			var w2 = b_str.substring(wi2,e_wi2);
 			var h2 = b_str.substring(hi2,e_hi2);
 			
-			b_str = b_str.replaceAll(w,'100%');
-			b_str = b_str.replaceAll(h,'auto');
-			b_str = b_str.replaceAll(w2,'100%');
-			b_str = b_str.replaceAll(h2,'auto');
+			b_str = b_str.replaceAll(w,'width: 100%');
+			b_str = b_str.replaceAll(h,'height: auto');
+			b_str = b_str.replaceAll(w2,'width: 100%');
+			b_str = b_str.replaceAll(h2,'height: auto');
 
 			
 		}
