--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 	<div class = tidning>
 		
 		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
-			<div id = 'blickfång'><script>draw_article_button('blickfång','inne-ute-sep-24',isMobile)</script></div>	
+			<div id = 'blickfång'><script>draw_article_button('blickfång','är-ditt-hem-redo-för-ett-hemsläp',isMobile)</script></div>	
 			<div style = "background: black; width: 100%;">
 
 			</div>
@@ -205,14 +205,15 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
-			<div id = 'main21'><script>draw_article_button('main21','är-ditt-hem-redo-för-ett-hemsläp',isMobile)</script></div>
-			<div id = 'main20'><script>draw_article_button('main20','turistortens-klagan',isMobile)</script></div>
-			<div id = 'main19'><script>draw_article_button('main19','det-stora-europeiska-ciggreportaget',isMobile)</script></div>
+			<div id = 'main22'><script>draw_article_button('main22','om-wrestling',isMobile)</script></div>	
+			<div id = 'main21'><script>draw_article_button('main21','är-ditt-hem-redo-för-ett-hemsläp',isMobile)</script></div>	
+			<div id = 'main20'><script>draw_article_button('main20','det-stora-europeiska-ciggreportaget',isMobile)</script></div>
 			
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
-			<div id = 'main151'><script>draw_article_button('main151','inne-ute-sep-24',isMobile)</script></div>
+			<div id = 'iul'><script>draw_article_button('iul','inne-ute-sep-24',isMobile)</script></div>
 
 			<h2 style = "width: 100%;">ÄLDRE</h2>
+			<div id = 'main19'><script>draw_article_button('main19','turistortens-klagan',isMobile)</script></div>
 			<div id = 'main18'><script>draw_article_button('main18','att-gå-vilse',isMobile)</script></div>
 			<div id = 'main17'><script>draw_article_button('main17','broder-daniel',isMobile)</script></div>
 			<div id = 'main16'><script>draw_article_button('main16','göteborgs-cyklister',isMobile)</script></div>
