--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Gaffel Magasin är sveriges farligaste popkulturmagasin. Vi ger dig allt det du borde veta om mode, pop, kultur och popkultur. Jag läser gaffel, vafan gör du?">
 	<meta name="keywords" content="gaffel, magasin, popkultur, kultur, göteborg">
+	<meta name="msvalidate.01" content="6844FBEEC009DB46FD737B018250EEE8" />
 	<title>GAFFEL</title>
 	<link rel="icon" type="image/x-icon" href="/favicon.ico">
 	<link rel="canonical" href="https://gaffel.nu" />
