--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 	<div class = tidning>
 		
 		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
-			<div id = 'blickfång'><script>draw_article_button('blickfång','är-ditt-hem-redo-för-ett-hemsläp',isMobile)</script></div>	
+			<div id = 'blickfång'><script>draw_article_button('blickfång','inne-ute-okt-24',isMobile)</script></div>	
 			<div style = "background: black; width: 100%;">
 
 			</div>
@@ -211,7 +211,7 @@
 			<div id = 'main21'><script>draw_article_button('main21','om-wrestling',isMobile)</script></div>
 			
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
-			<div id = 'iul'><script>draw_article_button('iul','inne-ute-sep-24',isMobile)</script></div>
+			<div id = 'iul'><script>draw_article_button('iul','inne-ute-okt-24',isMobile)</script></div>
 
 			<h2 style = "width: 100%;">ÄLDRE</h2>
 			<div id = 'main20'><script>draw_article_button('main20','det-stora-europeiska-ciggreportaget',isMobile)</script></div>
