--- a/index.html
+++ b/index.html
@@ -206,14 +206,16 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main24'><script>draw_article_button('main24','har-hon-verkligen-ett-sätt',isMobile)</script></div>
 			<div id = 'main23'><script>draw_article_button('main23','thriftarens-guide-gu',isMobile)</script></div>					
 			<div id = 'main22'><script>draw_article_button('main22','är-ditt-hem-redo-för-ett-hemsläp',isMobile)</script></div>
-			<div id = 'main21'><script>draw_article_button('main21','om-wrestling',isMobile)</script></div>
+			
 			
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
 			<div id = 'iul'><script>draw_article_button('iul','inne-ute-okt-24',isMobile)</script></div>
 
 			<h2 style = "width: 100%;">ÄLDRE</h2>
+			<div id = 'main21'><script>draw_article_button('main21','om-wrestling',isMobile)</script></div>
 			<div id = 'main20'><script>draw_article_button('main20','det-stora-europeiska-ciggreportaget',isMobile)</script></div>
 			<div id = 'main19'><script>draw_article_button('main19','turistortens-klagan',isMobile)</script></div>
 			<div id = 'main18'><script>draw_article_button('main18','att-gå-vilse',isMobile)</script></div>
