--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 		}
 		new_html += `<div style = "width: ${roww}%; margin: 3%; float: left;">
 				
-				<div style = "color: #FFFEF7FF; width: 95%;  margin-bottom: 7%;	${text_style_preamble}"> GAFFEL är ett magasin skapat AV ungar från kulturmedelklassen FÖR ungar från kulturmedelklassen, vi ger dig allt du behöver veta om pop, kultur och popkultur. <br><br>Redaktionen:<br>Chefredaktör: Nils Hagberg<br>Oansvarig utgivare: Elias Rågholm<br>Allt-i-Allo: Albin G Carlsson<br><br>Kungliga slottet, 107 70 Stockholm<br>
+				<div style = "color: #FFFEF7FF; width: 95%;  margin-bottom: 7%;	${text_style_preamble}"> GAFFEL är ett magasin skapat AV ungar från kulturmedelklassen FÖR ungar från kulturmedelklassen, vi ger dig allt du behöver veta om pop, kultur och popkultur. <br><br>Redaktionen:<br>Chefredaktör: Nils Hagberg<br>Oansvarig utgivare: Elias Rågholm<br>Chef Gaffel Öst: Albin G Carlsson<br><br>Kungliga slottet, 107 70 Stockholm<br>
 				<a href="mailto:gaffel.magasin@gmail.com" style = "color: #FFFEF7FF">gaffel.magasin@gmail.com</a></div>
     				
 				<div style = "display: inline;">
