--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 			<img src = "bilder/logga_morf_vit.png" class = gaffel_logga_bild></img>
 			<p id = 'slogan'">sveriges farligaste popkulturmagasin</p>
 			<script>
-				var slogan_array = ['sveriges farligaste popkulturmagasin','sveriges farligaste popkulturmagasin','sveriges farligaste popkulturmagasin','din kajplats i etern','pedagogisk underhållning i en trivsam miljö','see it, say it, sorted', 'royalty free beats'];
+				var slogan_array = ['sveriges farligaste popkulturmagasin','sveriges farligaste popkulturmagasin','sveriges farligaste popkulturmagasin','din kajplats i etern','pedagogisk underhållning i en trivsam miljö','bättre än nöjesguiden',];
 				var ny_slogan = slogan_array[Math.floor(Math.random()*slogan_array.length)];
 				console.log(ny_slogan);
 				document.getElementById('slogan').innerHTML = ny_slogan;
@@ -182,7 +182,7 @@
 		}
 		new_html += `<div style = "width: ${roww}%; margin: 3%; float: left;">
 				
-				<div style = "color: #FFFEF7FF; width: 95%;  margin-bottom: 7%;	${text_style_preamble}"> GAFFEL är ett magasin skapat AV ungar från kulturmedelklassen FÖR ungar från kulturmedelklassen, vi ger dig allt du behöver veta om pop, kultur och popkultur. <br><br>Redaktionen:<br>Chefredaktör: Nils Hagberg<br>Oansvarig utgivare: Elias Rågholm<br>Chef Gaffel Öst: Albin G Carlsson<br><br>Kungliga slottet, 107 70 Stockholm<br>
+				<div style = "color: #FFFEF7FF; width: 95%;  margin-bottom: 7%;	${text_style_preamble}"> Sveriges farligaste popkulturmagasin, av och för kulturmedelklassen. <br><br>Redaktionen:<br>Chefredaktör: Nils Hagberg<br>Ansvarig utgivare: Elias Rågholm<br>Chef Gaffel Öst: Albin G Carlsson<br><br>Kungliga slottet, 107 70 Stockholm<br>
 				<a href="mailto:gaffel.magasin@gmail.com" style = "color: #FFFEF7FF">gaffel.magasin@gmail.com</a></div>
     				
 				<div style = "display: inline;">
