--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Gaffel Magasin är sveriges farligaste popkulturmagasin. Vi ger dig allt det du borde veta om mode, pop, kultur och popkultur. Jag läser gaffel, vafan gör du?">
+	<meta name="description" content="Gaffel Magasin är sveriges farligaste popkulturmagasin. Allt det du borde veta om mode, pop, kultur och popkultur. Jag läser gaffel, vafan gör du?">
 	<meta name="keywords" content="gaffel, magasin, popkultur, kultur, göteborg">
 	<meta name="msvalidate.01" content="6844FBEEC009DB46FD737B018250EEE8" />
 	<title>GAFFEL</title>
@@ -138,7 +138,7 @@
 			<img src = "bilder/logga_morf_vit.png" class = gaffel_logga_bild></img>
 			<p id = 'slogan'">sveriges farligaste popkulturmagasin</p>
 			<script>
-				var slogan_array = ['sveriges farligaste popkulturmagasin','sveriges farligaste popkulturmagasin','sveriges farligaste popkulturmagasin','din kajplats i etern','pedagogisk underhållning i en trivsam miljö','bättre än nöjesguiden',];
+				var slogan_array = ['sveriges farligaste popkulturmagasin','sveriges farligaste popkulturmagasin','sveriges farligaste popkulturmagasin','är du farlig?','din kajplats i etern','bättre än nöjesguiden'];
 				var ny_slogan = slogan_array[Math.floor(Math.random()*slogan_array.length)];
 				console.log(ny_slogan);
 				document.getElementById('slogan').innerHTML = ny_slogan;
@@ -275,7 +275,7 @@
 		        </div>
 	  		<div class = side_div>
 				<img src="https://i.imgur.com/hSM3AhK.png" alt="GAFFEL" style="width:100%;height:auto;">
-    				<h1 style = "color: #FFFEF7FF">Gaffel är Sveriges farligaste popkulturmagasin somt trofast tjänar dig med allt det senaste inom pop, kultur och popkultur.</h1>
+    				<h1 style = "color: #FFFEF7FF">Gaffel är Sveriges farligaste popkulturmagasin, allt du behöver veta om pop, kultur och popkultur.</h1>
 		        </div>
 	   		`
 		    console.log([isMobile,window.innerWidth]);
