--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 		.banner{
 			  background: black;
-			  background-image: url("bilder/gaffel_bakgrund_tavlor.png");
+			  background-image: url("bilder/gaffel_bakgrund_köp.png");
 			  background-repeat: no-repeat;
 			  background-position-x: center;
 			  background-attachment: fixed;
