--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 	<div class = tidning>
 		
 		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
-			<div id = 'blickfång'><script>draw_article_button('blickfång','inne-ute-okt-24',isMobile)</script></div>	
+			<div id = 'blickfång'><script>draw_article_button('blickfång','5-snutfilmer',isMobile)</script></div>	
 			<div style = "background: black; width: 100%;">
 
 			</div>
@@ -206,14 +206,15 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main27'><script>draw_article_button('main27','bokmässan-2023',isMobile)</script></div>	
 			<div id = 'main26'><script>draw_article_button('main26','stockholms-falafelkunder',isMobile)</script></div>
-			<div id = 'main25'><script>draw_article_button('main25','5-snutfilmer',isMobile)</script></div>
-			<div id = 'main24'><script>draw_article_button('main24','har-hon-verkligen-ett-sätt',isMobile)</script></div>						
+			<div id = 'main25'><script>draw_article_button('main25','5-snutfilmer',isMobile)</script></div>					
 
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
 			<div id = 'iul'><script>draw_article_button('iul','inne-ute-okt-24',isMobile)</script></div>
 
 			<h2 style = "width: 100%;">ÄLDRE</h2>
+			<div id = 'main24'><script>draw_article_button('main24','har-hon-verkligen-ett-sätt',isMobile)</script></div>	
 			<div id = 'main23'><script>draw_article_button('main23','thriftarens-guide-gu',isMobile)</script></div>		
 			<div id = 'main22'><script>draw_article_button('main22','är-ditt-hem-redo-för-ett-hemsläp',isMobile)</script></div>
 			<div id = 'main21'><script>draw_article_button('main21','om-wrestling',isMobile)</script></div>
