--- a/artikel.html
+++ b/artikel.html
@@ -117,7 +117,7 @@
 	  <div style = "background: #001015FF; padding-top: 30px;">
 		<div id = 'rec1'><script>draw_article_button('rec1','om-wrestling',isMobile)</script></div>	
 		<div id = 'rec2'><script>draw_article_button('rec2','är-ditt-hem-redo-för-ett-hemsläp',isMobile)</script></div>	
-		<div id = 'rec3'><script>draw_article_button('rec3','det-stora-europeiska-ciggreportaget',isMobile)</script></div>
+		<div id = 'rec3'><script>draw_article_button('rec3','har-hon-verkligen-ett-sätt',isMobile)</script></div>
 	  </div>
         </div>
 
