--- a/index.html
+++ b/index.html
@@ -97,7 +97,19 @@
 			width: inherit;
 			height: auto;
 		}
-
+		.artikel_knapp{
+			font-family: helvetica_bold;
+			font-size: 30px;
+			color: white;
+			font-weight: 400;
+			margin: 15px;
+			background: black;
+			width: 100%;
+		}
+		.artikel_knapp:hover{
+			background: white;
+			colour: black;
+		}
 		
 		
 	</style>
@@ -212,7 +224,10 @@
 
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
 			<div id = 'iul'><script>draw_article_button('iul','inne-ute-okt-24',isMobile)</script></div>
-
+			<a class = 'artikel_knapp'>OKTOBER</a>
+			<a class = 'artikel_knapp'>OKTOBER</a>
+			<a class = 'artikel_knapp'>OKTOBER</a>
+			
 			<h2 style = "width: 100%;">ÄLDRE</h2>
 			<div id = 'main26'><script>draw_article_button('main26','stockholms-falafelkunder',isMobile)</script></div>
 			<div id = 'main25'><script>draw_article_button('main25','5-snutfilmer',isMobile)</script></div>	
