--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
 			font-size: 30px;
 			color: white;
 			font-weight: 400;
-			margin: 15px;
+			padding: 15px;
 			background: black;
 			width: 100%;
 		}
 		.artikel_knapp:hover{
 			background: white;
-			colour: black;
+			color: black;
 		}
 		
 		
