--- a/index.html
+++ b/index.html
@@ -101,10 +101,14 @@
 			font-family: helvetica_bold;
 			font-size: 30px;
 			color: white;
+			margin-top: 10px;
 			font-weight: 400;
 			padding: 15px;
 			background: black;
 			width: 100%;
+			  -webkit-user-select: none; /* Safari */
+			  -ms-user-select: none; /* IE 10 and IE 11 */
+			  user-select: none; /* Standard syntax */
 		}
 		.artikel_knapp:hover{
 			background: white;
@@ -225,8 +229,8 @@
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
 			<div id = 'iul'><script>draw_article_button('iul','inne-ute-okt-24',isMobile)</script></div>
 			<a class = 'artikel_knapp'>OKTOBER</a>
-			<a class = 'artikel_knapp'>OKTOBER</a>
-			<a class = 'artikel_knapp'>OKTOBER</a>
+			<a class = 'artikel_knapp'>SEPTEMBER</a>
+			<a class = 'artikel_knapp'>AUGUSTI</a>
 			
 			<h2 style = "width: 100%;">ÄLDRE</h2>
 			<div id = 'main26'><script>draw_article_button('main26','stockholms-falafelkunder',isMobile)</script></div>
