--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			color: white;
 			margin-top: 10px;
 			font-weight: 400;
-			padding: 15px;
+			border: 15px;
 			background: black;
 			width: 100%;
 			  -webkit-user-select: none; /* Safari */
