--- a/index.html
+++ b/index.html
@@ -228,10 +228,11 @@
 
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
 			<div id = 'iul'><script>draw_article_button('iul','inne-ute-okt-24',isMobile)</script></div>
-			<a class = 'artikel_knapp'>OKTOBER</a>
-			<a class = 'artikel_knapp'>SEPTEMBER</a>
-			<a class = 'artikel_knapp'>AUGUSTI</a>
-			
+			<div style = "display: block;">
+				<a class = 'artikel_knapp'>OKTOBER</a>
+				<a class = 'artikel_knapp'>SEPTEMBER</a>
+				<a class = 'artikel_knapp'>AUGUSTI</a>
+			</div>
 			<h2 style = "width: 100%;">ÄLDRE</h2>
 			<div id = 'main26'><script>draw_article_button('main26','stockholms-falafelkunder',isMobile)</script></div>
 			<div id = 'main25'><script>draw_article_button('main25','5-snutfilmer',isMobile)</script></div>	
