--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 			font-weight: 400;
 			border: 15px;
 			background: black;
-			width: 100%;
+			width: 90%;
 			  -webkit-user-select: none; /* Safari */
 			  -ms-user-select: none; /* IE 10 and IE 11 */
 			  user-select: none; /* Standard syntax */
@@ -228,7 +228,7 @@
 
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
 			<div id = 'iul'><script>draw_article_button('iul','inne-ute-okt-24',isMobile)</script></div>
-			<div style = "display: block;">
+			<div style = "display: grid;">
 				<a class = 'artikel_knapp'>OKTOBER</a>
 				<a class = 'artikel_knapp'>SEPTEMBER</a>
 				<a class = 'artikel_knapp'>AUGUSTI</a>
