--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
 			color: white;
 			margin-top: 10px;
 			font-weight: 400;
-			border: 15px;
+			padding: 15px;
 			background: black;
-			width: 90%;
+			width: 95%;
 			  -webkit-user-select: none; /* Safari */
 			  -ms-user-select: none; /* IE 10 and IE 11 */
 			  user-select: none; /* Standard syntax */
