--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 	<div class = tidning>
 		
 		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
-			<div id = 'blickfång'><script>draw_article_button('blickfång','5-snutfilmer',isMobile)</script></div>	
+			<div id = 'blickfång'><script>draw_article_button('blickfång','inne-ute-nov-24',isMobile)</script></div>	
 			<div style = "background: black; width: 100%;">
 
 			</div>
@@ -227,7 +227,7 @@
 			<div id = 'main27'><script>draw_article_button('main27','bokmässan-2023',isMobile)</script></div>	
 
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
-			<div id = 'iul'><script>draw_article_button('iul','inne-ute-okt-24',isMobile)</script></div>
+			<div id = 'iul'><script>draw_article_button('iul','inne-ute-nov-24',isMobile)</script></div>
 			<!--<div style = "display: grid;">
 				<a class = 'artikel_knapp'>OKTOBER</a>
 				<a class = 'artikel_knapp'>SEPTEMBER</a>
