--- a/index.html
+++ b/index.html
@@ -228,11 +228,11 @@
 
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
 			<div id = 'iul'><script>draw_article_button('iul','inne-ute-nov-24',isMobile)</script></div>
-			<!--<div style = "display: grid;">
-				<a class = 'artikel_knapp'>OKTOBER</a>
+			<div style = "display: grid;">
+				<a class = 'artikel_knapp' href='/artiklar?=inne-ute-okt-24'>OKTOBER</a>
 				<a class = 'artikel_knapp'>SEPTEMBER</a>
 				<a class = 'artikel_knapp'>AUGUSTI</a>
-			</div>-->
+			</div>
 			<h2 style = "width: 100%;">ÄLDRE</h2>
 			<div id = 'main27'><script>draw_article_button('main27','bokmässan-2023',isMobile)</script></div>
 			<div id = 'main26'><script>draw_article_button('main26','stockholms-falafelkunder',isMobile)</script></div>
