--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
 			font-weight: 400;
 			padding: 10px;
 			background: black;
-			width: 95%;
+			width: clamp(50px,100%,130px);
+			text-decoration: none;
 			  -webkit-user-select: none; /* Safari */
 			  -ms-user-select: none; /* IE 10 and IE 11 */
 			  user-select: none; /* Standard syntax */
@@ -229,9 +230,9 @@
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
 			<div id = 'iul'><script>draw_article_button('iul','inne-ute-nov-24',isMobile)</script></div>
 			<div style = "display: grid;">
-				<a class = 'artikel_knapp' href='/artiklar?=inne-ute-okt-24'>OKTOBER</a>
-				<a class = 'artikel_knapp'>SEPTEMBER</a>
-				<a class = 'artikel_knapp'>AUGUSTI</a>
+				<a class = 'artikel_knapp' href='/artiklel?=inne-ute-okt-24'>OKTOBER</a>
+				<a class = 'artikel_knapp' href='/artiklel?=inne-ute-sep-24'>SEPTEMBER</a>
+				<a class = 'artikel_knapp' href='/artiklel?=inne-ute-aug-24'>AUGUSTI</a>
 			</div>
 			<h2 style = "width: 100%;">ÄLDRE</h2>
 			<div id = 'main27'><script>draw_article_button('main27','bokmässan-2023',isMobile)</script></div>
