--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
 			<div id = 'iul'><script>draw_article_button('iul','inne-ute-nov-24',isMobile)</script></div>
 			<div style = "display: grid;">
-				<a class = 'artikel_knapp' href='/artiklel?=inne-ute-okt-24'>OKTOBER</a>
-				<a class = 'artikel_knapp' href='/artiklel?=inne-ute-sep-24'>SEPTEMBER</a>
-				<a class = 'artikel_knapp' href='/artiklel?=inne-ute-aug-24'>AUGUSTI</a>
+				<a class = 'artikel_knapp' href='/artikel?=inne-ute-okt-24'>OKTOBER</a>
+				<a class = 'artikel_knapp' href='/artikel?=inne-ute-sep-24'>SEPTEMBER</a>
+				<a class = 'artikel_knapp' href='/artikel?=inne-ute-aug-24'>AUGUSTI</a>
 			</div>
 			<h2 style = "width: 100%;">ÄLDRE</h2>
 			<div id = 'main27'><script>draw_article_button('main27','bokmässan-2023',isMobile)</script></div>
