--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
-			<div id = 'main31'><script>draw_article_button('main31','anti-mölndal',isMobile)</script></div>
+			<!--<div id = 'main31'><script>draw_article_button('main31','anti-mölndal',isMobile)</script></div>-->
 			<div id = 'main30'><script>draw_article_button('main30','bergman-vs-widerberg',isMobile)</script></div>
 			<div id = 'main29'><script>draw_article_button('main29','om-medelklassens-semestervanor',isMobile)</script></div>
 			<div id = 'main28'><script>draw_article_button('main28','kenta-stoffe-och-sverige',isMobile)</script></div>	
