--- a/index.html
+++ b/index.html
@@ -223,10 +223,9 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
-			<!--<div id = 'main31'><script>draw_article_button('main31','anti-mölndal',isMobile)</script></div>-->
+			<div id = 'main31'><script>draw_article_button('main31','anti-mölndal',isMobile)</script></div>
 			<div id = 'main30'><script>draw_article_button('main30','bergman-vs-widerberg',isMobile)</script></div>
 			<div id = 'main29'><script>draw_article_button('main29','om-medelklassens-semestervanor',isMobile)</script></div>
-			<div id = 'main28'><script>draw_article_button('main28','kenta-stoffe-och-sverige',isMobile)</script></div>	
 
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
 			<div id = 'iul'><script>draw_article_button('iul','inne-ute-nov-24',isMobile)</script></div>
@@ -235,7 +234,9 @@
 				<a class = 'artikel_knapp' href='/artikel?=inne-ute-sep-24'>SEPTEMBER</a>
 				<a class = 'artikel_knapp' href='/artikel?=inne-ute-aug-24'>AUGUSTI</a>
 			</div>
+
 			<h2 style = "width: 100%;">ÄLDRE</h2>
+			<div id = 'main28'><script>draw_article_button('main28','kenta-stoffe-och-sverige',isMobile)</script></div>	
 			<div id = 'main27'><script>draw_article_button('main27','bokmässan-2023',isMobile)</script></div>
 			<div id = 'main26'><script>draw_article_button('main26','stockholms-falafelkunder',isMobile)</script></div>
 			<div id = 'main25'><script>draw_article_button('main25','5-snutfilmer',isMobile)</script></div>	
