--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
 			font-family: helvetica_bold;
 			font-size: 50px;
 			line-height: 40px;
-			color: #FFFEF7FF;
+			color: white;
 			font-weight: 400;
 			margin-top: 35px;
 			margin-bottom: 20px;
 		        margin-left: 0px;
 		}
 		p{
-			color: #FFFEF7FF;
+			color: white;
 		}
 		.blog_area{
 			background: #01010100;
@@ -87,7 +87,7 @@
 			background: #044827FF;
 			padding: 20px 40px;
 			font-family: helvetica_bold;
-			color: #FFFEF7FF;
+			color: white;
 			font-size: clamp(5px,5vw,25px);
 			text-align: center;
 
@@ -278,7 +278,7 @@
 		  }
 		  .sid_cont{
 		          font-family: Helvetica-Bold;
-		          color: #FFFEF7FF;
+		          color: white;
 		          text-align: left;
 		          text-decoration: none;
 		          font-size: 22px;
@@ -290,7 +290,7 @@
 		        }
 		
 		        .sid_cont:hover {
-		          background-color: #FFFEF7FF;
+		          background-color: white;
 		          color: black;
 		        }
 		</style>
