--- a/header.html
+++ b/header.html
@@ -45,7 +45,7 @@
         .head_cont{
           font-family: Helvetica-Bold;
 	  float: left;
-          color: #FFFEF7FF;
+          color: white;
           text-align: center;
           padding: 18px 1vw;
           text-decoration: none;
@@ -54,7 +54,7 @@
         }
 
         .head_cont:hover {
-          background-color: #FFFEF7FF;
+          background-color: white;
           color: black;
         }
             
@@ -75,9 +75,6 @@
 		
 	    <div class = left_div>
 		<a href="/"><img src = "bilder/logga_morf_vit.png" style = "height: 100%; width: auto;"></img></a>
-		<!--<a href = "kultur" class = head_cont>KULTUR</a>
-		<a href = "mode" class = head_cont>MODE</a>
-		<a href = "livsstil" class = head_cont>LIVSSTIL</a>-->
             </div> 
 		
             <div class = right_div>
