--- a/index.html
+++ b/index.html
@@ -197,6 +197,12 @@
 					style = "width: ${imgw}%; float: right; background: #044827FF;">
 					</img>`
 		}
+		else{
+			new_html += 	`<img src =  "gaffel_i_värld_kvadrat.png"
+					style = "width: 100%; float: right; background: black;">
+					</img>`
+		}
+			
 		new_html += `<div style = "width: ${roww}%; margin: 3%; float: left;">
 				
 				<div style = "color: #FFFEF7FF; width: 95%;  margin-bottom: 7%;	${text_style_preamble}"> Sveriges farligaste popkulturmagasin, av och för kulturmedelklassen. <br><br>Redaktionen:<br>Chefredaktör: Nils Hagberg<br>Ansvarig utgivare: Elias Rågholm<br>Chef Gaffel Öst: Albin G Carlsson<br><br>Kungliga slottet, 107 70 Stockholm<br>
