--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 					</img>`
 		}
 		else{
-			new_html += 	`<img src =  "gaffel_i_värld_kvadrat.png"
+			new_html += 	`<img src =  "bilder/gaffel_i_värld_kvadrat.png"
 					style = "width: 100%; float: right; background: black;">
 					</img>`
 		}
