--- a/header.html
+++ b/header.html
@@ -67,7 +67,7 @@
         <div class = head_div>
             <div class = left_div>
             <a href="/" class = logga>
-              <img src="bilder/gaffel_logga_liten.png" alt="GAFFEL" style="width:50px;height:50px;">
+              <img src="https://i.imgur.com/hSM3AhK.png" alt="GAFFEL" style="width:50px;height:50px;">
             </a>
             </div> 
 	
