--- a/artikel.html
+++ b/artikel.html
@@ -148,7 +148,8 @@
     		console.log(a_str);
                        
             var titel = content_of_tag(a_str,"titel",0);
-            var preamble = content_of_tag(a_str,"ingress",0);
+            titel = titel.toUpperCase();
+	    var preamble = content_of_tag(a_str,"ingress",0);
             var bild = content_of_tag(a_str,"bild",0);
             var skribent = content_of_tag(a_str,"skribent",0);
             var datum = content_of_tag(a_str,"datum",0);
