--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			  background-image: url("bilder/ny_tavlor_komp.png");
 			  background-repeat: no-repeat;
 			  background-position: center center;
-			  background-attachment: fixed;
+			  background-attachment: scroll;
 			  background-size: cover;
 						
 			  height: 700px;
