--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			  background-image: url("bilder/ny_tavlor_komp.png");
 			  background-repeat: no-repeat;
 			  background-position: center center;
-			  background-attachment: scroll;
+			  background-attachment: fixed;
 			  background-size: cover;
 						
 			  height: 700px;
@@ -80,6 +80,12 @@
 			  display: flex;
 			  align-items: center;
 			  justify-content: center;
+		}
+
+		@media only screen and (max-width: 600px) {
+		  .banner {
+		     	background-attachment: scroll;
+		  }
 		}
 
 		.gaffel_logga{
