--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main33'><script>draw_article_button('main33','dagbok-från-kylskåpet',isMobile)</script></div>
 			<div id = 'main32'><script>draw_article_button('main32','om-tom-alandh',isMobile)</script></div>
 			<div id = 'main31'><script>draw_article_button('main31','anti-mölndal',isMobile)</script></div>
 			<div id = 'main30'><script>draw_article_button('main30','bergman-vs-widerberg',isMobile)</script></div>
