--- a/artikel.html
+++ b/artikel.html
@@ -115,9 +115,9 @@
 
 	  <script src = "scripts_ab.js"></script>
 	  <div style = "background: #001015FF; padding-top: 30px;">
-		<div id = 'rec1'><script>draw_article_button('rec1','anti-mölndal',isMobile)</script></div>	
+		<div id = 'rec1'><script>draw_article_button('rec1','staden-av-igår',isMobile)</script></div>	
 		<div id = 'rec2'><script>draw_article_button('rec2','inne-ute-nov-24',isMobile)</script></div>	
-		<div id = 'rec3'><script>draw_article_button('rec3','om-wrestling',isMobile)</script></div>
+		<div id = 'rec3'><script>draw_article_button('rec3','dagbok-från-kylskåpet',isMobile)</script></div>
 	  </div>
         </div>
 
