--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 			
 			margin: 0px;
 			padding: 0px;
-			 max-width: 100%;
-		   	 overflow-x: hidden;
+			max-width: 100%;
+		   	overflow-x: hidden !important;
 		}
 
 		.tidning{
