--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			
 			margin: 0px;
 			padding: 0px;
-			max-width: 100%;
+			max-width: 100% !important;
 		   	overflow-x: hidden !important;
 		}
 
